<resources>
    <string name="app_name">Voice Versa</string>
    <string name="process">Обработка аудио</string>
    <string name="account">Личный кабинет</string>
    <string name="login">логин</string>
    <string name="password">пароль</string>
    <string name="log_in">Войти</string>
    <string name="sign_in">Зарегистироваться</string>
    <string name="settings">Настройки</string>
    <string name="request">Заявка</string>
    <string name="library">Библиотека</string>
    <string name="elapsedTime">00:00</string>
    <string name="totalTime">1:00</string>
    <string name="voice">Голос</string>
    <string name="share">Поделиться</string>
    <string name="add">Добавить</string>
    <string name="download">Скачать</string>
    <string name="account_settings">Настройки аккаунта</string>
    <string name="audio_settings">Настройки работы с аудио</string>
    <string name="delete_library">Очистить библиотеку</string>
    <string name="autosave_res">   автосохранение результатов</string>
    <string name="autosave_rec">   автосохранение аудиозаписей</string>
    <string name="guest">Войти как гость</string>
    <string name="request_description">Если вы хотите добавить голос к возможным голосам для обработки аудиозаписей, прикрепите здесь образец желаемого голоса и отправьте в обработку. Рекомендуется прикреплять достаточно материала: хотя бы 10 минут речи, желательно без посторонних шумов. Вы можете записать аудиозапись или прикрепить архив, содержащий аудиозаписи. Модератор рассмотрит вашу заявку.</string>
    <string name="request_recording_caption">Запись</string>
    <string name="request_archive_caption">Загрузка архива</string>
    <string name="chosen_file">Выбранный файл</string>
    <string name="request_name">Название заявки или голоса</string>
    <string name="send_audio">Отправить аудиозапись</string>
    <string name="send_archive">Отправить архив</string>
</resources>