<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/login"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="244dp"
        android:clickable="true"
        android:cursorVisible="true"
        android:ellipsize="end"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/login"
        android:inputType="text"
        android:text=""
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginTop="45dp"
        android:clickable="true"
        android:cursorVisible="true"
        android:ellipsize="end"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/password"
        android:inputType="text"
        android:text=""
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/login"
        app:layout_constraintTop_toBottomOf="@id/login" />

    <Button
        android:id="@+id/log_in"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginTop="60dp"
        android:text="@string/log_in"
        app:layout_constraintStart_toStartOf="@id/login"
        app:layout_constraintTop_toBottomOf="@id/password" />

    <Button
        android:id="@+id/sign_in"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginTop="45dp"
        android:text="@string/sign_in"
        app:layout_constraintStart_toStartOf="@id/login"
        app:layout_constraintTop_toBottomOf="@id/log_in" />

</androidx.constraintlayout.widget.ConstraintLayout>