<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/Theme.FancyWork">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/settings_top_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ToolbarStyleLight"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:theme="@style/ToolbarStyleLight"
            android:id="@+id/settings_top_bar"
            app:title="@string/settings"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/menu"
            android:hapticFeedbackEnabled="false" />
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/account_settings"
        android:layout_width="wrap_content"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/settings_top_bar_layout"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        android:text="@string/account_settings"
        />

    <TextView
        android:id="@+id/account_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/account_settings"
        app:layout_constraintStart_toStartOf="@id/account_settings"
        />

    <Button
        android:id="@+id/log_in_out"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginTop="70dp"
        android:text="@string/log_in"
        android:background="@drawable/rounded_buttons"
        android:fontFamily="@font/roboto_slab"
        app:layout_constraintStart_toStartOf="@id/account_status"
        app:layout_constraintTop_toBottomOf="@id/account_status" />

    <TextView
        android:id="@+id/audio_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/log_in_out"
        app:layout_constraintStart_toStartOf="@id/log_in_out"
        android:text="@string/audio_settings"
        />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/autosave_rec"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:textSize="16sp"

        android:layout_height="wrap_content"
        android:text="@string/autosave_rec"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="230dp"
        app:layout_constraintTop_toBottomOf="@id/audio_settings"
        app:layout_constraintStart_toStartOf="@id/audio_settings"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/autosave_res"
        android:layout_width="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_height="wrap_content"
        android:text="@string/autosave_res"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/autosave_rec"
        app:layout_constraintStart_toStartOf="@id/autosave_rec"/>


    <Button
        android:id="@+id/delete_library"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/delete_library"
        android:background="@drawable/rounded_buttons"
        android:fontFamily="@font/roboto_slab"
        app:layout_constraintStart_toStartOf="@id/autosave_res"
        app:layout_constraintTop_toBottomOf="@id/autosave_res" />

</androidx.constraintlayout.widget.ConstraintLayout>