<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.RequestActivity"
    android:theme="@style/Theme.FancyWork">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/request_top_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ToolbarStyleLight"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:theme="@style/ToolbarStyleLight"
            android:id="@+id/request_top_bar"
            app:title="@string/request"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/menu"
            android:hapticFeedbackEnabled="false" />
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/request_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:textSize="16sp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/request_top_bar_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/black"
        android:text="@string/request_description"/>

    <TextView
        android:id="@+id/request_recording_caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/request_description"
        app:layout_constraintStart_toStartOf="@id/request_description"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/request_recording_caption"/>

    <Button
        android:id="@+id/request_startRecBtn"
        android:layout_width="31dp"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/mic"
        app:layout_constraintStart_toStartOf="@id/request_recording_caption"
        app:layout_constraintTop_toBottomOf="@id/request_recording_caption" />


    <Button
        android:id="@+id/request_pauseRecBtn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:background="@drawable/stop"
        app:layout_constraintStart_toEndOf="@id/request_startRecBtn"
        app:layout_constraintBottom_toBottomOf="@id/request_startRecBtn" />



    <Button
        android:id="@+id/request_attachRecBtn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="4dp"
        android:background="@drawable/attachment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/request_pauseRecBtn" />


    <Button
        android:id="@+id/request_playRecBtn"
        android:layout_width="32dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/play"
        android:onClick="playRecBtnClick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/request_startRecBtn" />

    <SeekBar
        android:id="@+id/request_positionRecBar"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/request_playRecBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.10"
        app:layout_constraintStart_toEndOf="@id/request_playRecBtn" />

    <LinearLayout
        android:id="@+id/request_time_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/request_positionRecBar">

        <TextView
            android:id="@+id/request_elapsedTimeLabelRec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="65dp"
            android:text="@string/elapsedTime" />

        <TextView
            android:id="@+id/request_totalTimeLabelRec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:text="@string/totalTime" />

    </LinearLayout>

    <TextView
        android:id="@+id/request_archive_caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/request_time_layout"
        app:layout_constraintStart_toStartOf="@id/request_description"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/request_archive_caption"/>

    <TextView
        android:id="@+id/request_archive_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/request_archive_caption"
        app:layout_constraintStart_toStartOf="@id/request_description"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:hint="@string/chosen_file"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/request_attach_archive"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="4dp"
        android:background="@drawable/attachment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/request_archive_name" />

    <TextView
        android:id="@+id/request_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/request_archive_name"
        app:layout_constraintStart_toStartOf="@id/request_description"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:text="@string/request"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/request_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="16sp"
        android:hint="@string/request_name"
          app:layout_constraintTop_toBottomOf="@id/request_caption"
        android:autofillHints=""
        android:inputType="text" />

    <Button
        android:id="@+id/send_audio"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/send_audio"
        android:onClick="sendAudio"
        android:background="@drawable/rounded_buttons"
        android:fontFamily="@font/roboto_slab"
        app:layout_constraintStart_toStartOf="@id/request_name"
        app:layout_constraintTop_toBottomOf="@id/request_name" />

    <Button
        android:id="@+id/send_archive"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/send_archive"
        android:layout_marginEnd="10dp"
        android:onClick="sendArchive"
        android:background="@drawable/rounded_buttons"
        android:fontFamily="@font/roboto_slab"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/send_audio" />

</androidx.constraintlayout.widget.ConstraintLayout>