<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/Theme.FancyWork">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/library_top_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ToolbarStyleLight"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:theme="@style/ToolbarStyleLight"
            android:id="@+id/account_top_bar"
            app:title="@string/account"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/account_menu"
            android:hapticFeedbackEnabled="false" />
    </com.google.android.material.appbar.AppBarLayout>


    <Button
        android:id="@+id/library"
        android:layout_width="220dp"
        android:layout_height="45dp"

        android:background="@drawable/rounded_buttons"
        android:fontFamily="@font/roboto_slab"
        android:text="@string/library"
        android:textSize="16sp"
        app:iconGravity="textTop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.195" />

    <Button
        android:id="@+id/settings"
        android:layout_width="220dp"
        android:layout_height="45dp"
        android:layout_marginEnd="268dp"
        android:background="@drawable/rounded_buttons"
        android:fontFamily="@font/roboto_slab"
        android:text="@string/settings"
        android:textSize="16sp"
        app:iconGravity="textTop"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/library"
        app:layout_constraintTop_toBottomOf="@id/library"
        app:layout_constraintVertical_bias="0.10" />

    <Button
        android:id="@+id/request"
        android:layout_width="220dp"
        android:layout_height="45dp"
        android:layout_marginEnd="268dp"
        android:background="@drawable/rounded_buttons"
        android:fontFamily="@font/roboto_slab"
        android:text="@string/request"
        android:textSize="16sp"
        app:iconGravity="textTop"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/library"
        app:layout_constraintTop_toBottomOf="@id/settings"
        app:layout_constraintVertical_bias="0.10" />

</androidx.constraintlayout.widget.ConstraintLayout>