<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/item_background"
    android:layout_height="wrap_content"
    android:theme="@style/Theme.FancyWork">


    <TextView
        android:id="@+id/audio_name"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/voice"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/date"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="5dp"
        android:ellipsize="end"
        android:maxLines="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/audio_name" />

    <Button
        android:id="@+id/playBtn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/play"
        app:layout_constraintStart_toStartOf="@id/audio_name"
        app:layout_constraintTop_toBottomOf="@id/audio_name" />

    <SeekBar
        android:id="@+id/positionBar"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/playBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toEndOf="@id/playBtn" />

    <Button
        android:id="@+id/actions"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="5dp"
        android:layout_margin="5dp"
        app:layout_constraintBottom_toBottomOf="@id/positionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/positionBar"
        android:background="@drawable/vertical" />


    <TextView
        android:id="@+id/elapsedTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:text="@string/elapsedTime"
        app:layout_constraintStart_toStartOf="@id/positionBar"
        app:layout_constraintTop_toBottomOf="@id/positionBar" />

    <TextView
        android:id="@+id/totalTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/totalTime"
        app:layout_constraintEnd_toEndOf="@id/positionBar"
        app:layout_constraintTop_toBottomOf="@id/positionBar"
        tools:layout_editor_absoluteX="321dp" />

</androidx.constraintlayout.widget.ConstraintLayout>